--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,10 +19,15 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: |
+            25-ea
             21
             17
             8
           distribution: 'temurin'
+      - name: Have toolchain provide 25-ea as JDK-25
+        run: |
+          perl -pe 's/>25-ea</>25</' -i ~/.m2/toolchains.xml
+          cat ~/.m2/toolchains.xml
       - name: Maven version
         run: mvn --version
       - name: Present project dependencies
@@ -33,6 +38,8 @@ jobs:
         run: mvn test -P jdk_8 -P junit_5.13.4 | grep --line-buffered -v Download
       - name: Test on jdk-21 - install-scenarios included
         run: mvn test -P jdk_21 -P enableInstallScenarios -P junit_latest
+      - name: Test on jdk-25 - install-scenarios included
+        run: mvn test -P jdk_25 -P enableInstallScenarios -P junit_latest
       - name: Test on jdk-6 - with recent bytebuddy
         run: mvn test -o -P jdk_6
       - name: Test on jdk-6 - with old bytebuddy
