Improve security a bit by using pgpverify-maven-plugin
to check signatures on plugins and dependencies.

Of special concern are the JUnit dependencies version ranges, which help
trigger download and test with latest JUnit release, as soon as a new
release (possibly milestone or release-candidate) is available. This can
hopefully help the next developer feel confident that newly downloaded
JUnit artifacts are indeed valid, by automatically checking that they
have valid signatures and that these signatures are made with keys that
are controlled by recognized JUnit maintainers.

On top of just checking the dependencies we also try to make the most
out of this by also checking plugins and their dependencies.

--- a/pom.xml
+++ b/pom.xml
@@ -569,6 +569,29 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.12.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.simplify4u.plugins</groupId>
+                <artifactId>pgpverify-maven-plugin</artifactId>
+                <version>1.19.1</version>
+                <executions>
+                    <execution>
+                        <goals><goal>check</goal></goals>
+                        <configuration>
+                            <verifyPluginDependencies>true</verifyPluginDependencies>
+                        </configuration>
+                    </execution>
+                </executions>
+                <configuration>
+                    <keysMapLocations>
+                        <keysMapLocation>https://raw.githubusercontent.com/s4u/pgp-keys-map/bd07fcca0cc992b12dde18da81700dba812e64c0/resources/pgp-keys-map.list</keysMapLocation>
+                        <keysMapLocation>${basedir}/extra-pgp-keys.list</keysMapLocation>
+                    </keysMapLocations>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
