--- a/pom.xml
+++ b/pom.xml
@@ -352,7 +352,10 @@
                 <artifactId>maven-toolchains-plugin</artifactId>
                 <version>3.2.0</version>
                 <executions>
-                    <execution><goals><goal>toolchain</goal></goals></execution>
+                    <execution>
+                        <goals><goal>toolchain</goal></goals>
+                        <phase>initialize</phase>
+                    </execution>
                 </executions>
                 <!--
                 Force Surefire and Failsafe to run tests with toolchain JDK,
