--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,19 +15,15 @@ jobs:
         with:
           java-version: 6
           distribution: 'zulu'
-      - name: 'Set up Java 8 & 17 & 21'
+      - name: 'Set up Java 8 & 17 & 21 & 25'
         uses: actions/setup-java@v4
         with:
           java-version: |
-            25-ea
+            25
             21
             17
             8
           distribution: 'temurin'
-      - name: Have toolchain provide 25-ea as JDK-25
-        run: |
-          perl -pe 's/>25-ea</>25</' -i ~/.m2/toolchains.xml
-          cat ~/.m2/toolchains.xml
       - name: Maven version
         run: mvn --version
       - name: Present project dependencies
