--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     <properties>
         <version.platform>[1.7.2,7)</version.platform>
         <version.junit5or6>[5.7.2,7)</version.junit5or6>
-        <version.bytebuddy>1.17.5</version.bytebuddy>
+        <version.bytebuddy>1.17.7</version.bytebuddy>
         <version.mockito>4.11.0</version.mockito>
         <exclude.testfactory-tests.on.jupiter.5.7.or.earlier>
             Reliable support for Jupiter @TestFactory starts at version 5.8.x
@@ -921,6 +921,18 @@ reevaluated once-in-while by running tests with this profile enabled!
                  by default (non-profile) properties declaration! -->
         </profile>
         <profile>
+            <id>bytebuddy_1.17.6</id><!-- Introduced at Mockito-5.19 -->
+            <properties><version.bytebuddy>1.17.6</version.bytebuddy></properties>
+        </profile>
+        <profile>
+            <id>bytebuddy_1.17.5</id><!-- Introduced at Mockito-5.18 -->
+            <properties><version.bytebuddy>1.17.5</version.bytebuddy></properties>
+        </profile>
+        <!-- ByteBuddy-1.16 is not widely used.
+             Mockito versions 5.16.0 to 5.17.0 stick to ByteBuddy-1.15.11
+             that was introduced at Mockito-5.15:
+        -->
+        <profile>
             <id>bytebuddy_1.15.11</id><!-- Introduced at Mockito-5.15 -->
             <properties><version.bytebuddy>1.15.11</version.bytebuddy></properties>
         </profile>
@@ -969,10 +981,10 @@ reevaluated once-in-while by running tests with this profile enabled!
             <properties><version.bytebuddy>1.14.4</version.bytebuddy></properties>
         </profile>
         <!--
-        bytebuddy-1.14.1 was introduced as Mockito dependency at version 5.2.
+        ByteBuddy-1.14.1 was introduced as Mockito dependency at version 5.2.
         Unfortunatelly it is not very compatible with LazyParams, so it is not tested here!
         -->
-        <!-- Bytebuddy-4.13 has never been used much -->
+        <!-- ByteBuddy-1.13 is not widely used -->
         <profile>
             <id>bytebuddy_1.12.22</id><!-- Introduced at Mockito-5.0 -->
             <properties>
