--- a/pom.xml
+++ b/pom.xml
@@ -836,10 +836,18 @@ reevaluated once-in-while by running tests with this profile enabled!
                  current (possibly milestone or RC) release of JUnit-6. -->
         </profile>
         <profile>
+            <id>junit_6.0</id>
+            <properties>
+                <version.junit5or6>6.0.1</version.junit5or6>
+                <version.platform>6.0.1</version.platform>
+                <profile.junit5or6.unsupported>false</profile.junit5or6.unsupported>
+            </properties>
+        </profile>
+        <profile>
             <id>junit_5.14</id>
             <properties>
-                <version.junit5or6>5.14.0</version.junit5or6>
-                <version.platform>1.14.0</version.platform>
+                <version.junit5or6>5.14.1</version.junit5or6>
+                <version.platform>1.14.1</version.platform>
                 <profile.junit5or6.unsupported>false</profile.junit5or6.unsupported>
             </properties>
         </profile>
