--- a/pom.xml
+++ b/pom.xml
@@ -349,27 +349,6 @@
                 </executions>
             </plugin>
             <plugin>
-                <artifactId>maven-toolchains-plugin</artifactId>
-                <version>3.2.0</version>
-                <executions>
-                    <execution>
-                        <goals><goal>toolchain</goal></goals>
-                        <phase>initialize</phase>
-                    </execution>
-                </executions>
-                <!--
-                Force Surefire and Failsafe to run tests with toolchain JDK,
-                which version can be overridden by profiles.
-                -->
-                <configuration>
-                    <toolchains>
-                        <jdk>
-                            <version>${version.test.jdk}</version>
-                        </jdk>
-                    </toolchains>
-                </configuration>
-            </plugin>
-            <plugin>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>3.1.1</version>
                 <configuration>
@@ -449,6 +428,38 @@
                 </executions>
             </plugin>
 
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.14</version>
+                <executions>
+                    <execution>
+                        <goals><goal>prepare-agent</goal></goals>
+                        <phase>process-test-classes</phase>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-toolchains-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <goals><goal>toolchain</goal></goals>
+                        <phase>process-test-classes</phase>
+                    </execution>
+                </executions>
+                <!--
+                Force Surefire and Failsafe to run tests with toolchain JDK,
+                which version can be overridden by profiles.
+                -->
+                <configuration>
+                    <toolchains>
+                        <jdk>
+                            <version>${version.test.jdk}</version>
+                        </jdk>
+                    </toolchains>
+                </configuration>
+            </plugin>
             <plugin>
                 <!--
                 Use Surefire's sibling plugin ...
@@ -551,18 +562,6 @@
                                 <classpathDependencyExclude>org.powermock:powermock-module-junit4</classpathDependencyExclude>
                             </classpathDependencyExcludes>
                         </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.14</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
                     </execution>
                 </executions>
             </plugin>
